<resources>
    <string name="app_name">Kotlin App</string>
    <string name="button_to_cycle">1. To Life Cycle Events</string>
    <string name="button_to_click">2. To Click Events</string>
    <string name="button_to_candroid_extensions">3. To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4. To Picasso</string>
    <string name="button_to_list_view">5. To List View</string>
    <string name="button_to_intents">6. To Intents</string>
    <string name="button_to_permissions">7. To Permissions</string>
    <string name="button_to_shared_preferences">8. To Shared Preferences</string>
    <string name="button_to_extension_function">9. To Extension Functions</string>
    <string name="button_click_xml">Click by XML</string>
    <string name="button_click_line">Click In Line</string>
    <string name="button_multi_1">Multiple Buttons 1</string>
    <string name="button_multi_2">Multiple Buttons 2</string>
    <string name="button_multi_3">Multiple Buttons 3</string>
    <string name="button_kat">Button by findviewbyid</string>
    <string name="button_kat_kat">button by kat</string>
    <string name="load_images">Load Images</string>
    <string name="button_intent_extras">Intent with Extras</string>
    <string name="button_intent_flags">Intent with Flags</string>
    <string name="button_intent_object">Intent with Objetc</string>
    <string name="go_back">go back</string>
    <string name="take_picture">Take a picture</string>
    <string name="text_activity_life_cycle">Activity life cycle</string>
    <string name="type_name_here">Type name here</string>
    <string name="type_age_here">Type age here</string>
    <string name="save_preferences">Save preferences</string>
</resources>
