<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_constraint">

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <Button
            android:id="@+id/button_to_cycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_cycle"
            app:layout_constraintBottom_toTopOf="@+id/button_to_click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_click"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_cycle"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_candroid_extensions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_candroid_extensions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_click"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_picasso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_picasso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_candroid_extensions"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_list_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_picasso"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_intents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_intents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_list_view"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_permissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_permissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_intents"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_shared_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_shared_preferences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_permissions"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_to_extension_function"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_extension_function"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_shared_preferences"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
